--- a/src/Pages/PlannerPage.style.css
+++ b/src/Pages/PlannerPage.style.css
@@ -1,50 +1,6 @@
-.c-planner-layout {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  flex-direction: column;
-
-  width: inherit;
-  height: inherit;
-}
-
-/* Nav Bar */
-.navbar {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #0078d7;
-  padding: 10px 20px;
-}
-
-.navbar .logo {
-  margin-left: 8px;
-  color: #fff;
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-.nav-links li {
-  display: inline;
-  margin-left: 20px;
-}
-
-.nav-links a {
-  color: #fff;
-  font-size: 1em;
-  transition: color 0.3s ease;
-}
-
-.nav-links a:hover {
-  color: #d1e7ff;
-}
-
 /* Hero Section */
 
 .hero {
-  width: 100%;
   text-align: center;
   padding: 50px 20px;
   background-color: green;
